# online_electronics_retail

./: pyproject.toml
company/: admin.py  models.py  urls.py
company/migrations/: 0001_initial.py
config/: settings.py  urls.py
debt/: admin.py  apps.py  models.py  urls.py
debt/migrations/: 0001_initial.py
product/: admin.py  models.py  urls.py
product/migrations/: 0001_initial.py
users/: admin.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
